# unmask

./: .gitignore  .gitmodules  README.md  config.py  pyproject.toml  registry.py  runner.py  server.py  worker.py
demo/: app.js  index.html  styles.css
patches/: llama-diffusion-server.patch
src/unmask/: __init__.py  __main__.py  cli.py  config.py  models.py
src/unmask/api/: __init__.py  app.py  errors.py  execution.py  ollama.py  openai.py  parsing.py  prompts.py  responses.py  streaming.py
src/unmask/inference/: __init__.py  errors.py  output_cleaning.py  paths.py  runner.py  worker.py
tests/: test_model_registry.py  test_output_cleaning.py  test_parsing_and_prompts.py
